# hw-oauth

./: README.md  mydb.db  pyproject.toml  run_backend.py  run_front.py
app/: __init__.py
app/db/: __init__.py
app/db/models/: __init__.py  user.py
app/routes/: __init__.py  auth.py
backend/: __init__.py  mydb.db
backend/db/helpers/: __init__.py  crud.py
backend/routes/: auth.py  default.py
frontend/: __init__.py
frontend/routes/: default.py
frontend/templates/: __base.html  login.html
